[gd_scene load_steps=3 format=2]

[ext_resource path="res://OptionMenu.gd" type="Script" id=1]
[ext_resource path="res://open_sans_64.tres" type="DynamicFont" id=2]

[node name="OptionMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.992987, 0.996325 )
script = ExtResource( 1 )

[node name="Server" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -499.011
margin_top = -199.41
margin_right = 480.989
margin_bottom = -101.41
custom_fonts/font = ExtResource( 2 )
align = 1

[node name="Back" type="Button" parent="."]
margin_left = 372.613
margin_top = 602.213
margin_right = 902.613
margin_bottom = 696.213
custom_fonts/font = ExtResource( 2 )
text = "Back"

[node name="Test" type="Button" parent="."]
margin_left = 372.613
margin_top = 270.996
margin_right = 902.613
margin_bottom = 364.996
custom_fonts/font = ExtResource( 2 )
text = "Test"

[node name="Label" type="Label" parent="."]
margin_left = 412.895
margin_top = 60.2213
margin_right = 881.895
margin_bottom = 148.221
size_flags_horizontal = 3
size_flags_stretch_ratio = 102.16
custom_fonts/font = ExtResource( 2 )
text = "Enter a Server:"
align = 1
valign = 1

[node name="HTTP_check_server" type="HTTPRequest" parent="."]

[node name="Test_status" type="Label" parent="."]
margin_left = 563.955
margin_top = 381.402
margin_right = 603.955
margin_bottom = 469.402
align = 1
valign = 1
[connection signal="text_changed" from="Server" to="." method="_on_Server_text_changed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Test" to="." method="_on_Test_pressed"]
[connection signal="request_completed" from="HTTP_check_server" to="." method="_on_HTTP_check_server_request_completed"]
